# rename-media

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: gh-pages.yml  python-app.yml
docs/: conf.py  getting_started_for_developer.md  index.rst  requirements.txt
src/: requirements.txt
src/rename_media/: __main__.py  api.py  cmdline.py  common.py  image.py  video.py
src/rename_media/adapters/: cmdline.py  date_extractor.py
src/rename_media/core/: __init__.py  model.py  ports.py  use_cases.py
tests/: requirements.txt
tests/test_rename_media/: fixtures.py  test_api_image.py  test_api_video.py  test_common.py  test_image.py  test_video.py
tests/test_rename_media/test_adapters/: test_date_extractor_image.py  test_date_extractor_video.py
tests/test_rename_media/test_core/: test_model.py  test_use_cases.py
