[build-system]
requires = ["setuptools>=62.6", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "rename-media"
description = "Bulk rename media files."
readme = {file = "README.md", content-type="text/markdown"}
authors = [{ name = "Christof Pieloth" }]
license-files = ["LICENSE.txt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
requires-python = ">=3.12,<4"
dynamic = ["version", "dependencies"]

[project.scripts]
rename-media = "rename_media.__main__:main"

[[tool.mypy.overrides]]
module = ["exif.*"]
follow_untyped_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["*"]

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = [
    "tests",
]
